--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
         <title>Site do Mago</title>
 
         <link rel="icon" href="img/favicon.ico" type="image/x-icon">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 
         <link rel="stylesheet" href="style.css">
     </head>
